--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,24 @@
-<h1>justShare</h1>
-<a href="/signup">Sign Up</a>
-<a href="/login">Login</a>
+ <div class="container">
+	<nav class="desk">
+		<ul>
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="#">Sign up</a></li>
+			<li><a href="#">Log in</a></li>
+			<li><a href="#">All Porducts</a></li>
+		</ul>
+	</nav>
+	<nav class="mob">
+		<div class="hamburger-btn">
+		<i class="fal fa-align-justify"></i>
+		<i class="fal fa-times-circle"></i>
+		</div>
+		<ul>
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="#">Sign up</a></li>
+			<li><a href="#">Log in</a></li>
+			<li><a href="#">All Porducts</a></li>
+		</ul>
+	</nav>
+ <div class="header"></div>
+
+</div>
