--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
- <div class="container">
+ {{!-- <div class="container">
 	<nav class="desk">
 		<ul>
 			<li class="active"><a href="#">Home</a></li>
@@ -21,4 +21,15 @@
 	</nav>
  <div class="header"></div>
 
-</div>
+</div> --}}
+
+<main>
+
+  <h1 class="main-header">justShare</h1>
+  <div class="button-container">
+    <a class="button signup-button" href="/signup">Sign Up</a>
+    <a class="button login-button" href="/login">Login</a>
+  </div>
+  
+</main>
+
