--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>justShare</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Pacifico" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="sylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <nav>
+      <div id="nav-brand-container">
+        <img id="nav-logo" src="/images/vegetables-white.png" alt="">
+        <span id="nav-brand">justShare</span>
+      </div>
+      <div id="nav-links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </div>
+    </nav>
     {{{body}}}
   </body>
 </html>
