--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 
-*{
+/* *{
   margin: 0;
   padding: 0;
   user-select: none;
@@ -77,4 +77,88 @@ nav.mob,
     padding: 20px;
     cursor: pointer;
   }
+} */
+html {
+  font-size: 18px;
+}
+
+body {
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
+}
+
+a {
+  color: #00B7FF;
+}
+
+/**************************** NAVBAR *****************************/
+
+nav {
+  height: 7vh;
+  background-color:rgb(6, 204, 181);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#nav-brand-container {
+  display: flex;
+  align-items: center;
+}
+
+#nav-logo {
+  height: 5vh;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+#nav-brand {
+  color: white;
+  font-family: 'Pacifico', cursive;
+  font-size: 1rem;
+}
+
+#nav-links {
+  padding-right: 20px;
+}
+
+#nav-links a {
+  text-decoration: none;
+  color: white;
+  padding-left: 10px;
+}
+
+/************* HOMEPAGE **************/
+
+main {
+  color: white;
+  height: 93vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background: linear-gradient(rgba(35, 119, 91, 0.472), rgba(15, 41, 47, 0.512)), url('../images/alexandr-podvalny-221880-unsplash.jpg') center / cover no-repeat; */
+  background: linear-gradient(rgba(34, 2, 70, 0.472), rgba(13, 0, 24, 0.512)), url('../images/alexandr-podvalny-221880-unsplash.jpg') center / cover no-repeat;
+}
+
+.main-header {
+  font-size: 5rem;
+  color: rgb(255, 255, 255);
+  font-family: 'Pacifico', cursive;
+  font-weight: 100;
+  margin-bottom: 0;
+}
+
+.button {
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+  padding: 15px;
+  width: 70px;
+  background-color: rgb(6, 204, 181);
+  border-radius: 15px;
+  margin: 0 15px;
 }
