--- a/views/passport/signup.hbs
+++ b/views/passport/signup.hbs
@@ -1,23 +1,28 @@
-<h2>Sign Up!</h2>
+<section class="signup-page">
 
-<form action="" method="POST" class="form-container">
-  <input type="text" name="name" placeholder="Restaurant Name">
-  <input type="text" name="email" placeholder="Email">
-  <input type="text" name="phone" placeholder="Phone">
-  <input type="text" name="street" placeholder="Street">
-  <input type="text" name="city" placeholder="City">
-  <input type="text" name="neighborhood" placeholder="Neighborhood">
-  <input type="password" name="password" placeholder="Password">
+  <section class="form-container">
+    <h2>Sign Up!</h2>
+    <form action="" method="POST">
+      <input type="text" name="name" placeholder="Restaurant Name">
+      <input type="text" name="email" placeholder="Email">
+      <input type="text" name="phone" placeholder="Phone">
+      <input type="text" name="street" placeholder="Street">
+      <input type="text" name="city" placeholder="City">
+      <input type="text" name="neighborhood" placeholder="Neighborhood">
+      <input type="password" name="password" placeholder="Password">
 
-  {{#if message}}
-    <div class="error-message">{{ message }}</div>
-  {{/if}}
-  <br><br>
+      {{#if message}}
+        <div class="error-message">{{ message }}</div>
+      {{/if}}
+      
 
-  <button id="signup-button">Sign Up!</button>
+      <button id="signup-button">Sign Up!</button>
 
-  <p class="account-message">
-    Do you already have an account?
-    <a href="/login">Login</a>
-  </p>
-</form>
+      <p class="account-message">
+        Do you already have an account?
+        <a href="/login">Login</a>
+      </p>
+    </form>
+  </section>
+</section>
+
