--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,5 @@
-<<<<<<< HEAD
-
-/* *{
-=======
 /* 
 *{
->>>>>>> eac0763f82c2afc0d31fe629b9310d8196033fdc
   margin: 0;
   padding: 0;
   user-select: none;
@@ -83,10 +78,6 @@ nav.mob,
     cursor: pointer;
   }
 } */
-<<<<<<< HEAD
-=======
-
->>>>>>> eac0763f82c2afc0d31fe629b9310d8196033fdc
 html {
   font-size: 18px;
 }
@@ -170,8 +161,44 @@ main {
   background-color: rgb(6, 204, 181);
   border-radius: 15px;
   margin: 0 15px;
-<<<<<<< HEAD
 }
-=======
+
+/************* FORMS **************/
+
+.signup-page {
+  height: 93vh;
+  background: pink;
+  padding-top: 20px;
+  background: linear-gradient(rgba(34, 2, 70, 0.472), rgba(13, 0, 24, 0.512)), url('../images/josh-wilburne-501948-unsplash.jpg') center / cover no-repeat ;
 }
->>>>>>> eac0763f82c2afc0d31fe629b9310d8196033fdc
+
+.form-container {
+  background-color: rgb(118, 255, 239);
+  padding: 15px 30px 30px 30px;
+  width: 65vw;
+  max-width: 600px;
+  margin: 50px auto 0;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+form input {
+  height: 30px;
+  margin-bottom: 10px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+form button {
+  height: 30px;
+  border-radius: 15px;
+  /* margin-top: -30px; */
+}
+
+form p {
+  margin-top: 30px;
+}
