--- a/views/passport/login.hbs
+++ b/views/passport/login.hbs
@@ -1,14 +1,19 @@
+
+
+<section class="login-page">
+  <section class="form-container">
 <h2>Login</h2>
 
-<form action="" method="POST" class="form-container">
+<form action="" method="POST">
   <input type="text" name="email" placeholder="Email">
   <input type="password" name="password" placeholder="Password">
 
   {{#if message}}
     <div class="error-message">{{ message }}</div>
   {{/if}}
-  <br><br>
 
   <button id="signup-button">Login!</button>
 
 </form>
+  </section>
+</section>
