--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -170,15 +170,19 @@ main {
   height: 93vh;
   background: pink;
   padding-top: 20px;
-  background: linear-gradient(rgba(34, 2, 70, 0.472), rgba(13, 0, 24, 0.512)), url('../images/josefin-1272706-unsplash.jpg') center / cover no-repeat ;
+  background: url('../images/markus-spiske-139525-unsplash.jpg') center / cover no-repeat ;
 }
 
 .form-container {
-  background-color: rgb(118, 255, 239);
+  border-radius: 15px;
   padding: 15px 30px 30px 30px;
+  color: white;
   width: 65vw;
   max-width: 600px;
   margin: 50px auto 0;
+  border: 3px solid rgb(5, 223, 197);
+  /* background: rgb(82, 37, 104);   */
+  background: rgba(110, 173, 165, 0.864);
 }
 
 form {
