--- a/views/passport/login.hbs
+++ b/views/passport/login.hbs
@@ -1,14 +1,19 @@
-<h2>Login</h2>
-
-<form action="" method="POST" class="form-container">
-  <input type="text" name="email" placeholder="Email">
-  <input type="password" name="password" placeholder="Password">
-
-  {{#if message}}
-    <div class="error-message">{{ message }}</div>
-  {{/if}}
-  <br><br>
-
-  <button id="signup-button">Login!</button>
+<form action="/login" method="POST">
+  <div>
+    <label for="username">Username:</label>
+    <input type="text" name="username">
+  </div>
+  <div>
+    <label for="password">Password:</label>
+    <input type="password" name="password">
+  </div>
+    
+    {{#if message}}
+      <div class="error-message">{{ message }}</div>
+    {{/if}}
+  
+  <div>
+    <input type="submit" value="Log In">
+  </div>
 
 </form>
