--- a/views/passport/signup.hbs
+++ b/views/passport/signup.hbs
@@ -1,20 +1,19 @@
-<h2>Sign Up!</h2>
+<!-- views/auth/signup.hbs -->
+<h2>Signup</h2>
 
-<form action="" method="POST" class="form-container">
-  <input type="text" name="name" placeholder="Restaurant Name">
-  <input type="text" name="email" placeholder="Email">
-  <input type="text" name="phone" placeholder="Phone">
-  <input type="text" name="street" placeholder="Street">
-  <input type="text" name="city" placeholder="City">
-  <input type="text" name="neighborhood" placeholder="Neighborhood">
-  <input type="password" name="password" placeholder="Password">
+<form action="/signup" method="POST" id="form-container">
+  <label for="username">Username</label>
+  <input id="username" type="text" name="username" placeholder="JonSnow">
+  <br><br>
+  <label for="password">Password</label>
+  <input id="password" type="password" name="password" placeholder="Your password">
 
   {{#if message}}
     <div class="error-message">{{ message }}</div>
   {{/if}}
   <br><br>
 
-  <button id="signup-button">Sign Up!</button>
+  <button>Create account</button>
 
   <p class="account-message">
     Do you already have an account?
