Add CRUD functionality

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <h1>justShare</h1>
+<a href="/product">Products</a>
 <a href="/signup">Sign Up</a>
 <a href="/login">Login</a>
-<a href="/profile-page">Profile</a>
+<a href="/profile">Profile</a>
