--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,7 @@
-<h1>Profile</h1>
+<h1>{{user.username}}</h1>
 
-<h4>Shhhhhhhhh!</h4>
-<img src="https://media.giphy.com/media/yow6i0Zmp7G24/giphy.gif" alt="shhhhh">
+<h4>List all your products</h4>
+
 <br>
 
 <div>
@@ -18,3 +18,20 @@
 <a href="/logout">
   <button>Logout</button>
 </a>
+
+<a href="/product/new">
+<button>List new product</button>
+</a>
+
+<h1>Listed Products</h1>
+{{#each allProductsFromDB}}
+  <p><a href="/products/{{this.id}}">{{this.name}}</a></p>
+  <a href="products/edit">
+<button>Edit Product</button>
+</a>
+<a href="products/delete">
+<button>Delete product</button>
+</a>
+{{/each}}
+
+
