--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,83 +1,3 @@
-/* 
-*{
-  margin: 0;
-  padding: 0;
-  user-select: none;
-  }
-body{
-  font-family: 'Roboto', sans-serif;
-}
-.container nav.desk,
-.container nav.mob{
-  width: 100%;
-  background: #364a4b;
-  height: 60px;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14);
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-nav.desk ul{
-  list-style: none;
-  width: 75%;
-  height: 60px;
-  margin: 0 auto;
-}
-
-nav.desk ul li{
-  width: 20%;
-  float: left;
-  text-align: center;
-  line-height: 60px;
-  cursor: pointer;
-  transition: all 0.5s ease;
-}
-
-nav ul li:hover{
-  background: #a3ada5;
-}
-
-nav ul li.active{
-  background: #a3ada5;
-}
-nav ul li a{
-  color: #fff;
-  text-decoration: none;
-}
-nav.mob,
-.hamburger-btn{
-  display: none;
-}
-@media screen and (max-width: 700px){
-  nav.desk{
-    display: none;
-  }
-  nav.mob,
-  .hamburger-btn{
-    display: block;
-  }
-  .hamburger-btn{
-    position: relative;
-  }
-  .hamburger-btn .fa-align-justify,
-  .hamburger-btn .fa-times-circle{
-     position: fixed;
-     right: 25px;
-     top: 15px;
-     font-size: 35px;
-     color: #fff;
-     cursor: pointer;
-  }
-  .mob ul{
-    margin-top: 60px;
-    background: #364a4b;
-  }
-  .mob li{
-    text-align:center;
-    padding: 20px;
-    cursor: pointer;
-  }
-} */
 html {
   font-size: 18px;
 }
@@ -93,7 +13,7 @@ a {
   color: #00B7FF;
 }
 
-/**************************** NAVBAR *****************************/
+/************************************* NAVBAR **************************************/
 
 nav {
   height: 7vh;
@@ -130,7 +50,7 @@ nav {
   padding-left: 10px;
 }
 
-/************* HOMEPAGE **************/
+/*********************************** HOMEPAGE ***********************************/
 
 main {
   color: white;
@@ -164,7 +84,7 @@ main {
   margin: 0 15px;
 }
 
-/************* FORMS **************/
+/********************************* SIGNUP **********************************/
 
 .signup-page {
   height: 93vh;
@@ -179,7 +99,7 @@ main {
   padding: 15px 30px 30px 30px;
   color: white;
   width: 65vw;
-  height: 500px;
+  height: 460px;
   max-width: 600px;
   border: 3px solid rgb(5, 223, 197);
   background: rgba(5, 223, 197, .9); 
@@ -205,4 +125,18 @@ form button {
 
 form p {
   margin-top: 30px;
+}
+
+/********************************* LOGIN **********************************/
+
+.login-page {
+  height: 93vh;
+  background: linear-gradient(rgba(22, 22, 22, 0.5), rgba(66, 66, 66, 0.5)),url('../images/lettuce.jpg') center / cover no-repeat ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-page .form-container {
+  height: 225px;
 }
