--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
         <span id="nav-brand">justShare</span>
       </div>
       <div id="nav-links">
-        <a href="#">Home</a>
+        <a href="/">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
       </div>
