--- a/views/passport/login.hbs
+++ b/views/passport/login.hbs
@@ -4,7 +4,7 @@
   <section class="form-container">
 <h2>Login</h2>
 
-<form action="" method="POST">
+<form action="/login" method="POST">
   <input type="text" name="username" placeholder="username">
   <input type="password" name="password" placeholder="Password">
 
