--- a/views/passport/signup.hbs
+++ b/views/passport/signup.hbs
@@ -3,6 +3,7 @@
   <section class="form-container">
     <h2>Sign Up!</h2>
     <form action="" method="POST">
+      <input type="text" name="username" placeholder="Create username">
       <input type="text" name="name" placeholder="Restaurant Name">
       <input type="text" name="email" placeholder="Email">
       <input type="text" name="phone" placeholder="Phone">
