--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,37 +1,21 @@
-<h1>{{user.username}}</h1>
+<h1>PROFILE: {{user.username}}</h1>
 
-<h4>List all your products</h4>
+<h2>List all your products</h2>
 
 <br>
 
-<div>
-  {{#if user}}
-  <h3>user.req :</h3>
-    <p>{{user}}</p>
-  {{/if}}
-</div>
 
-<a href="/">
-  <button>Home</button>
-</a>
 
-<a href="/logout">
-  <button>Logout</button>
-</a>
-
-<a href="/product/new">
-<button>List new product</button>
-</a>
+<a href="/logout"><button>Logout</button></a>
+<a href="/product/new"><button>List new product</button></a>
 
 <h1>Listed Products</h1>
 {{#each allProductsFromDB}}
-  <p><a href="/products/{{this.id}}">{{this.name}}</a></p>
-  <a href="products/edit">
-<button>Edit Product</button>
-</a>
-<a href="products/delete">
-<button>Delete product</button>
-</a>
+  <p>{{this.name}}</p>
+  <p>{{this.description}}</p>
+  <p>{{this.allergens}}</p>
+  <a href="products/edit"><button>Edit</button></a>
+  <a href="products/delete"><button>Delete</button></a>
 {{/each}}
 
 
