--- a/views/passport/new.hbs
+++ b/views/passport/new.hbs
@@ -1,16 +1,15 @@
-
 <h1>Add a new Products</h1>
 <form action="/product/new" method="POST">
-  <label for="name">name</label>
+  <label for="">name</label>
   <input type="text" name="name" id="name">
 
-  <label for="description">description</label>
+  <label for="">description</label>
   <input type="text" name="description" id="description">
 
-  <label for="allergens">allergens</label>
+  <label for="">allergens</label>
   <input type="text" name="allergens" id="allergens">
 
-  <label for="location">location</label>
+  <label for="">location</label>
   <input type="text" name="location" id="location">
 
   <button type="submit">List new product</button>
