Add classes to the profile page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -140,3 +140,5 @@ form p {
 .login-page .form-container {
   height: 225px;
 }
+
+/********************************* LOGIN **********************************/
