--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -4,38 +4,25 @@
     <a class="new-button button" href="/product/new">Add New Product</a>
   </div>
   
+  <h1 class="profile-products-heading">View Your Listed Products</h1>
   <div class="profile-products">
-    <h1>View Your Listed Products</h1>
-    {{#each allProductsFromDB}}
-      <p>{{this.name}}</p>
-      <img src="{{this.image}}" alt="">
-      <p>{{this.description}}</p>
-      <p>{{this.allergens}}</p>
-      <a href="products/edit"><button>Edit</button></a>
-      <a href="products/delete"><button>Delete</button></a>
-    {{/each}}
+    
+      {{#each allProductsFromDB}}
+        <div class="item">
+          <p>{{this.name}}</p>
+          <img class="product-image" src="{{this.image}}" alt="">
+          <p>{{this.description}}</p>
+          <p>{{this.allergens}}</p>
+          <a href="products/edit"><button>Edit</button></a>
+          <a href="products/delete"><button>Delete</button></a>
+        </div>
+      {{/each}}
+   
+    
   </div>
-  
-
 </section>
 
 
 
 
 
-<<<<<<< HEAD
-=======
-<a href="/logout"><button>Logout</button></a>
-<a href="/product/new"><button>List new product</button></a>
-
-<h1>Listed Products</h1>
-{{#each allProductsFromDB}}
-  <p>{{this.name}}</p>
-  <img src="{{this.image}}" alt="">
-  <p>{{this.description}}</p>
-  <p>{{this.allergens}}</p>
-  <p>{{this._id}}</p>
-  <a href="/product/edit?product_id={{this._id}}"><button>Edit</button></a>
-  <a href="/product/delete?product_id={{this._id}}"><button>Delete</button></a>
-{{/each}}
->>>>>>> ad0b2dc501816607c736a20ca142dd940583f306
