--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,11 +23,13 @@
 
 </div> --}}
 <main>
-
-  <h1 class="main-header">justShare</h1>
+<div class="main-content">
+	<h1 class="main-header">justShare</h1>
   <div class="button-container">
     <a class="button signup-button" href="/signup">Sign Up</a>
     <a class="button login-button" href="/login">Login</a>
   </div>
+  
+</div>
   
 </main>
