--- a/views/passport/login.hbs
+++ b/views/passport/login.hbs
@@ -12,7 +12,7 @@
         <div class="error-message">{{ message }}</div>
       {{/if}}
 
-      <button id="signup-button">Login!</button>
+      <button class="form-button" id="signup-button">Login!</button>
 
     </form>
   </section>
