--- a/views/passport/new.hbs
+++ b/views/passport/new.hbs
@@ -1,16 +1,22 @@
-<h1>Add a new Products</h1>
-<form action="/product/new" enctype="multipart/form-data" method="POST">
-  <label for="name">name</label>
-  <input type="text" name="name" id="name">
+<section class="new-page">
 
-  <label for="image">image</label>
-  <input type="text" name="image" id="name">
+<section class="form-container">
+  <h1>Add a new Products</h1>
+  <form action="/product/new" enctype="multipart/form-data" method="POST">
+    <label for="name">Food Item</label>
+    <input type="text" name="name" id="name">
 
-  <label for="description">description</label>
-  <input type="text" name="description" id="description">
+    <label for="image">Image</label>
+    <input type="text" name="image" id="name">
 
-  <label for="">allergens</label>
-  <input type="text" name="allergens" id="allergens">
+    <label for="description">Description</label>
+    <input type="text" name="description" id="description">
 
-  <button type="submit">List new product</button>
-</form>
+    <label for="">Allergens</label>
+    <input type="text" name="allergens" id="allergens">
+
+    <button class="form-button" type="submit">List new product</button>
+  </form>
+</section>
+</section>
+
