--- a/views/passport/signup.hbs
+++ b/views/passport/signup.hbs
@@ -15,7 +15,7 @@
       {{/if}}
       
 
-      <button id="signup-button">Sign Up!</button>
+      <button class="form-button" id="signup-button">Create Account!</button>
 
       <p class="account-message">
         Do you already have an account?
