--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -206,3 +206,82 @@ form button {
 form p {
   margin-top: 30px;
 }
+
+/************* SHOW PRODUCTS **************/
+
+.showProducts{
+  background:linear-gradient(rgba(2, 2, 0, 0.5), rgba(15, 19, 0, 0.401)), url('../images/bread.jpg') center / cover no-repeat;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+@media (min-width: 900px) {
+  .showProducts{
+    height: 100vh;
+  }
+}
+.content{
+  background-color: rgb(245,245,245,0.8);
+  width: 90%;
+  height: 90%;
+  margin: 40px;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  z-index: 1; 
+  border-radius: 2%; 
+}
+h2 {
+  color: rgb(49, 40, 40);
+  border-bottom: 2px solid  rgb(49, 40, 40);
+  width: 280px;
+  font-size: 25px;
+  position: relative;
+  top:10px;
+  margin-bottom: 10px;
+}
+.display{
+  width:100%;
+  height: 100%;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.display figure {
+	margin:15px 10px;
+  width: 250px;
+  height: 250px;
+	text-align: center;
+}
+
+.display figure img{
+	border: 1px solid white;
+  width: 200px;
+  height: 150px;
+	box-shadow:gray 5px 5px 10px;
+  border-radius: 10%;
+  margin-bottom: 5px;
+} 
+
+.display figcaption {
+  margin: 5px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding-left: 25px;
+  color: rgb(49, 40, 40);
+}
+.display p{
+  margin: 5px 5px 5px 0px;
+}
+.showProducts .button-container{
+  margin-bottom: 10px;
+}
