--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,33 +1,11 @@
- {{!-- <div class="container">
-	<nav class="desk">
-		<ul>
-			<li class="active"><a href="#">Home</a></li>
-			<li><a href="#">Sign up</a></li>
-			<li><a href="#">Log in</a></li>
-			<li><a href="#">All Porducts</a></li>
-		</ul>
-	</nav>
-	<nav class="mob">
-		<div class="hamburger-btn">
-		<i class="fal fa-align-justify"></i>
-		<i class="fal fa-times-circle"></i>
-		</div>
-		<ul>
-			<li class="active"><a href="#">Home</a></li>
-			<li><a href="#">Sign up</a></li>
-			<li><a href="#">Log in</a></li>
-			<li><a href="#">All Porducts</a></li>
-		</ul>
-	</nav>
- <div class="header"></div>
-
-</div> --}}
 <main>
 <div class="main-content">
 	<h1 class="main-header">justShare</h1>
   <div class="button-container">
     <a class="button signup-button" href="/signup">Sign Up</a>
     <a class="button login-button" href="/login">Login</a>
+		<a class="button signup-button" href="/product">View Products</a>
+    
   </div>
   
 </div>
