--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,9 +13,9 @@
         <span id="nav-brand">justShare</span>
       </div>
       <div id="nav-links">
-        <a href="/">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="/signup">Sign Up</a>
+        <a href="/login">Login</a>
+        <a href="/product">View Products</a>
       </div>
     </nav>
     {{{body}}}
