Add media query for small screens - home, profile, and forms are styled

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,7 @@
     <nav>
       <div id="nav-brand-container">
         <img id="nav-logo" src="/images/vegetables-white.png" alt="">
-        <span id="nav-brand">justShare</span>
+        <a href="/"><span id="nav-brand">justShare</span></a>
       </div>
       <div id="nav-links">
         <a href="/signup">Sign Up</a>
