--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -413,6 +413,7 @@ h2 {
   main .button-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100vw;
   }
   
