--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,8 @@
   <head>
     <title>justShare</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Pacifico" rel="stylesheet">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js'></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
@@ -12,8 +14,8 @@
         <span id="nav-brand">justShare</span>
       </div>
       <div id="nav-links">
+        <a href="/product">Products</a>
         <a href="/">Home</a>
-        <a href="#">About</a>
         <a href="#">Contact</a>
       </div>
     </nav>
