--- a/views/passport/signup.hbs
+++ b/views/passport/signup.hbs
@@ -2,20 +2,17 @@
 
   <section class="form-container">
     <h2>Sign Up!</h2>
-    <form action="" method="POST">
+    <form action="/signup" method="POST">
       <input type="text" name="username" placeholder="Create a username">
-      <input type="text" name="name" placeholder="Restaurant Name">
-      <input type="text" name="email" placeholder="Email">
-      <input type="text" name="phone" placeholder="Phone">
-      <input type="text" name="address" placeholder="Address">
+      <input type="text" name="restaurant" placeholder="Restaurant Name">
+      <input type="email" name="email" placeholder="Email">
+      <input type="text" name="neighborhood" placeholder="neighborhood">
       <input type="password" name="password" placeholder="Password">
-
+      <button id="signup-button">Sign Up!</button>
+      
       {{#if message}}
         <div class="error-message">{{ message }}</div>
       {{/if}}
-      
-
-      <button id="signup-button">Sign Up!</button>
 
       <p class="account-message">
         Do you already have an account?
